Hook up the test suite to automake
To run it, do `make check`.

The logs are in utest/runner.log and utest/test-suite.log

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /autoconf/ltmain.sh
 /autoconf/missing
 /autoconf/mkinstalldirs
+/autoconf/test-driver
 /autom4te.cache
 /configure
 /src/server/protocol1/vss_strip
