--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,8 @@
 *.swp
 *.swo
 .deps/
-/*.tar.bz2
-/*.tar.gz
 .dirstamp
+/*.tar.bz2
 /aclocal.m4
 /autoconf/Make.common
 /autoconf/Make.common2
@@ -18,9 +17,16 @@
 /autoconf/mkinstalldirs
 /autoconf/test-driver
 /autom4te.cache
+/burp
 /configure
+/runner
+/runner.log
+/runner.trs
 /src/server/protocol1/vss_strip
 /src/stamp-h1
+/test-suite.log
+/utest_find/
+/utest_xattr/
 Makefile
 Makefile.in
 config.h.in
@@ -28,6 +34,4 @@ config.log
 config.out
 config.status
 libtool
-src/bedup
-src/burp
 src/config.h
