Look for socket in libsocket and inet_ntop in nsl
Needed on Solaris

--- a/configure.ac
+++ b/configure.ac
@@ -118,6 +118,8 @@ AC_CHECK_FUNCS_ONCE([lockf lutimes chflags readdir_r])
 
 AC_FUNC_ALLOCA
 
+AC_SEARCH_LIBS([inet_ntop], [nsl])
+AC_SEARCH_LIBS([socket], [socket])
 
 dnl --------------------------------------------------------------------------
 dnl check for dependencies
