Tweak check check

--- a/configure.ac
+++ b/configure.ac
@@ -303,16 +303,26 @@ AC_CHECK_HEADERS([ncurses.h],
 AC_SUBST([NCURSES_LIBS])
 
 
-dnl check for 'Check', needed for the test suite
-m4_ifdef([PKG_CHECK_MODULES], [
-   PKG_CHECK_MODULES([CHECK], [check], [], [
-      AC_MSG_NOTICE([You will need to install 'Check' to run the test suite])
-   ])
-])
+dnl -----------------------------------------------------------
+dnl Check whether libcheck ('Check') is available
+dnl -----------------------------------------------------------
 
-dnl
+m4_ifdef([PKG_CHECK_MODULES],
+  [
+    PKG_CHECK_MODULES([CHECK], [check], [],
+      [
+        AC_MSG_NOTICE([You will need to install 'Check' to run the test suite])
+      ]
+    )
+  ]
+)
+
+
+dnl -----------------------------------------------------------
 dnl Check for ACL support and libraries
-dnl
+dnl -----------------------------------------------------------
+
+
 support_acl=auto
 AC_ARG_ENABLE([acl],
   [AS_HELP_STRING([--disable-acl],
